# ASL-Translator-Test-Model

./: ASLBackend.cpp  ASLBackend.h  CMakeLists.txt  CameraFeed.cpp  CameraFeed.h  Hand signs.spec  LiveTextBar.cpp  LiveTextBar.h  SignLibraryPanel.cpp  SignLibraryPanel.h  TitleBar.cpp  TitleBar.h  data_pass.py  history.txt  main.cpp  mainwindow.cpp  mainwindow.h  sign_library.h  sign_model_pytorch.onnx  sign_model_pytorch.onnx.data  sign_model_words_pytorch.onnx  sign_model_words_pytorch.onnx.data  word_mapping.json
